Updated Swagger docs
