# docs/swagger.json
@@ -80,7 +80,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/models.Snippet"
+                            "$ref": "#/definitions/handlers.CreateSnippetRequest"
                         }
                     }
                 ],
@@ -485,6 +485,23 @@
                 }
             }
         },
+        "handlers.CreateSnippetRequest": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "language": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "handlers.EmailRequest": {
             "type": "object",
             "properties": {
@@ -529,7 +546,6 @@
                     "type": "string"
                 },
                 "size": {
-                    "description": "Size in bytes",
                     "type": "integer"
                 },
                 "updatedAt": {
@@ -544,7 +560,6 @@
                     "type": "string"
                 },
                 "created_snippets": {
-                    "description": "User Stats",
                     "type": "array",
                     "items": {
                         "type": "integer"
@@ -563,7 +578,6 @@
                     "type": "string"
                 },
                 "total_storage": {
-                    "description": "Size in bytes (Max is 1MB = 1,048,576 bytes)",
                     "type": "integer"
                 },
                 "updatedAt": {
